Work the suite ratchet from 290 to 168 through diagnosed batches
A nine-agent parallel diagnosis read the failing suite files against the C
and wrote 48 root-cause findings to docs/suite-cluster-diagnoses.md. Twelve
batches then drained the high-confidence ones, each verified with a probe,
pinned by a FromTheSourceTest, specced in the garden and run through the
full test suite before the next began:

- charsets spread string members; TRIM/head/tail trims both ends; TRIM/WITH
  removes by datatype, an integer as one code point
- FIND and SELECT: /reverse and /last step one at a time; a sub-one forward
  /skip answers none on a string and raises on a block; a block key matches
  a run inside a record
- TAKE/deep/part clones what it took; INSERT/part splices the counted run
  either way and refuses a count outside 32 bits; REMOVE/part reads a
  length from a same-series position
- a bare CATCH/QUIT no longer swallows throws; a CATCH/WITH function
  handler is type-checked and none-padded; a set-path paren evaluates
- FOR counts whole numbers with overflow-after-body, walks series
  positions; REPEAT walks a pair as a grid
- CHANGE grows the target and answers past the change; REPLACE copies an
  aliased replacement before writing
- PARSE gains NOT, LIMIT (not-done), REJECT, RETURN, THEN, a compound-rule
  AHEAD, command-word rejection after TO/THRU, and a get-word that switches
  the input series
- SORT/compare hands chars and binaries, not raw bytes and blocks

Also in: the surface work from earlier goals (WRITE, CALL, READ,
LOAD-EXTENSION, request-file), the port datatype, IN and GET in full, the
borrowed mezz files loading whole, and the datatype backlog that carried
them (event, gob, handle, image, module).